; ModuleID = '/home/carl/AnghaBench/kphp-kdb/storage/extr_storage-data.c_readin.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/storage/extr_storage-data.c_readin.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@rptr = common dso_local global i64 0, align 8
@wptr = common dso_local global i64 0, align 8
@io_buff = common dso_local global i64 0, align 8
@IO_BUFFSIZE = common dso_local global i64 0, align 8
@idx_fd = common dso_local global i32 0, align 4
@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [24 x i8] c"error reading file: %m\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i64)* @readin to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @readin(i64 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  store i64 %0, i64* %3, align 8
  %5 = load i64, i64* %3, align 8
  %6 = icmp uge i64 %5, 0
  %7 = zext i1 %6 to i32
  %8 = call i32 @assert(i32 %7)
  %9 = load i64, i64* @rptr, align 8
  %10 = load i64, i64* %3, align 8
  %11 = add i64 %9, %10
  %12 = load i64, i64* @wptr, align 8
  %13 = icmp ule i64 %11, %12
  br i1 %13, label %14, label %17

14:                                               ; preds = %1
  %15 = load i64, i64* @rptr, align 8
  %16 = inttoptr i64 %15 to i8*
  store i8* %16, i8** %2, align 8
  br label %65

17:                                               ; preds = %1
  %18 = load i64, i64* @wptr, align 8
  %19 = load i64, i64* @io_buff, align 8
  %20 = load i64, i64* @IO_BUFFSIZE, align 8
  %21 = add nsw i64 %19, %20
  %22 = icmp slt i64 %18, %21
  br i1 %22, label %23, label %24

23:                                               ; preds = %17
  store i8* null, i8** %2, align 8
  br label %65

24:                                               ; preds = %17
  %25 = load i64, i64* @io_buff, align 8
  %26 = load i64, i64* @rptr, align 8
  %27 = load i64, i64* @wptr, align 8
  %28 = load i64, i64* @rptr, align 8
  %29 = sub nsw i64 %27, %28
  %30 = call i32 @memcpy(i64 %25, i64 %26, i64 %29)
  %31 = load i64, i64* @rptr, align 8
  %32 = load i64, i64* @io_buff, align 8
  %33 = sub nsw i64 %31, %32
  %34 = load i64, i64* @wptr, align 8
  %35 = sub nsw i64 %34, %33
  store i64 %35, i64* @wptr, align 8
  %36 = load i64, i64* @io_buff, align 8
  store i64 %36, i64* @rptr, align 8
  %37 = load i32, i32* @idx_fd, align 4
  %38 = load i64, i64* @wptr, align 8
  %39 = load i64, i64* @io_buff, align 8
  %40 = load i64, i64* @IO_BUFFSIZE, align 8
  %41 = add nsw i64 %39, %40
  %42 = load i64, i64* @wptr, align 8
  %43 = sub nsw i64 %41, %42
  %44 = call i32 @read(i32 %37, i64 %38, i64 %43)
  store i32 %44, i32* %4, align 4
  %45 = load i32, i32* %4, align 4
  %46 = icmp slt i32 %45, 0
  br i1 %46, label %47, label %50

47:                                               ; preds = %24
  %48 = load i32, i32* @stderr, align 4
  %49 = call i32 @fprintf(i32 %48, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0))
  br label %55

50:                                               ; preds = %24
  %51 = load i32, i32* %4, align 4
  %52 = sext i32 %51 to i64
  %53 = load i64, i64* @wptr, align 8
  %54 = add nsw i64 %53, %52
  store i64 %54, i64* @wptr, align 8
  br label %55

55:                                               ; preds = %50, %47
  %56 = load i64, i64* @rptr, align 8
  %57 = load i64, i64* %3, align 8
  %58 = add i64 %56, %57
  %59 = load i64, i64* @wptr, align 8
  %60 = icmp ule i64 %58, %59
  br i1 %60, label %61, label %64

61:                                               ; preds = %55
  %62 = load i64, i64* @rptr, align 8
  %63 = inttoptr i64 %62 to i8*
  store i8* %63, i8** %2, align 8
  br label %65

64:                                               ; preds = %55
  store i8* null, i8** %2, align 8
  br label %65

65:                                               ; preds = %64, %61, %23, %14
  %66 = load i8*, i8** %2, align 8
  ret i8* %66
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @memcpy(i64, i64, i64) #1

declare dso_local i32 @read(i32, i64, i64) #1

declare dso_local i32 @fprintf(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
